# talatrivia-api-django

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/: conftest.py
apps/core/: views.py
apps/questions/: admin.py  apps.py  urls.py
apps/questions/admins/: choice_admin.py  question_admin.py
apps/questions/enums/: difficulty_level.py
apps/questions/migrations/: 0001_initial.py  0002_initial.py  0003_remove_choice_questions_c_questio_2d835e_idx_and_more.py
apps/questions/models/: choice.py  question.py
apps/questions/serializers/: choice_serializer.py  question_serializer.py
apps/questions/tests/: conftest.py  factories.py  test_models.py  test_serializers.py  test_validations.py  test_views.py
apps/questions/views/: choice_viewset.py  question_viewset.py
apps/trivias/: admin.py  apps.py  urls.py
apps/trivias/admins/: participation_admin.py  trivia_admin.py
apps/trivias/migrations/: 0001_initial.py  0002_initial.py  0003_remove_trivia_created_by.py  0004_alter_participation_options_and_more.py
apps/trivias/models/: participation.py  trivia.py  trivia_question.py  user_answer.py
apps/trivias/serializers/: answer_input_serializer.py  participation_serializer.py  ranking_serializer.py  trivia_serializer.py  user_answer_serializer.py
apps/trivias/services/: participation_service.py
apps/trivias/tests/: conftest.py  factories.py  test_integrations.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_views.py
apps/trivias/views/: participation_viewset.py  ranking_view.py  trivia_viewset.py  user_answer_viewset.py
apps/users/: admin.py  apps.py  urls.py
apps/users/admins/: user_admin.py
apps/users/enums/: user_role.py
apps/users/managers/: user_manager.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_is_verified.py  0003_alter_user_managers.py
apps/users/models/: __init__.py  user.py
apps/users/serializers/: login_serializer.py  me_serializer.py  token_serializer.py  user_serializer.py
apps/users/services/: auth_service.py
apps/users/tests/: conftest.py  factories.py  test_auth_endpoints.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_validations.py  test_views.py
apps/users/views/: auth_viewset.py  user_viewset.py
config/: env.py  urls.py
config/settings/: base.py  development.py  production.py  staging.py
docker/: entrypoint.sh
